--- a/src/components/semantics/Inputs/InputNumber/InputNumber.css
+++ b/src/components/semantics/Inputs/InputNumber/InputNumber.css
@@ -1,32 +1,4 @@
 
-body, html {
-  background: #fafafa;
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-  min-height: 100vh;
-}
-
-:root {
-  --primary-color-1 : rgba(180,180,0,100%);
-  --primary-color-2: rgba(180,180,0,60%);
-  --primary-color-3: rgba(180,180,0,30%);
-  --secondary-color-1 : rgba(180,0,90,100%);
-  --tertiary-color-1 : rgba(180,90,0,100%);
-}
-
-
-.fwk-container {
-  background-color: #333;
-  color : #fff;
-  padding : 10px;
-}
-
-.f-col {
-  display: flex;
-  flex-direction: column;
-}
-
 .input-container {
   position: relative;
 }
@@ -51,11 +23,19 @@ input[type=email].mocor {
   border-width: 0px 0px 2px 0px;
   border-radius: 0px;
   -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   height: 1.2rem;
   background-color:#ffffff0F;
   box-shadow:unset;
   transition: all 300ms ease-in-out;
   color: #fafafa;
+}
+
+input[type=number].mocor::-webkit-inner-spin-button,
+input[type=number].mocor::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  display: none ;
 }
 
 input[type=text].mocor:focus,
@@ -221,17 +201,4 @@ input[type=reset].mocor.outline,
 input[type=submit].mocor.outline {
   background-color: transparent;
   color : white;
-}
-
-
-[data-alt]::after {
-  content: attr(data-alt);
-  background-color: #222;
-  color: white;
-  border-radius: 2px;
-  border: 2px solid #ff0000;
-  padding: 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
