--- a/src/components/semantics/Meter/Meter.scss
+++ b/src/components/semantics/Meter/Meter.scss
@@ -1,7 +1,5 @@
 
 svg.mocor-meter {
-  border-width: 1px ;
-  border-style:  solid ;
-  border-color : white;
-  border-radius : 50%;
+  width: 2.5rem;
+  height: 2.5rem;
 }
