--- a/src/components/semantics/Inputs/InputNumber/InputNumber.scss
+++ b/src/components/semantics/Inputs/InputNumber/InputNumber.scss
@@ -113,47 +113,47 @@ input[type="radio"].mocor:checked::after {
     content: "";
 }
 
-input[type="file"].mocor::after,
-input[type="button"].mocor,
-input[type="reset"].mocor,
-input[type="submit"].mocor {
+%button {
     -webkit-appearance: none;
     appearance: none;
     border-style: solid;
     border-width: 2px;
     border-radius: 4px;
-    background-color: #fafafa;
+    // background-color: #fafafa;
     border-color: #fafafa;
-    color: black;
+    // color: black;
 }
 
-input[type="button"].mocor.primary,
-input[type="reset"].mocor.primary,
-input[type="submit"].mocor.primary {
-    background-color: var(--primary-color-1);
-    border-color: var(--primary-color-1);
-    color: white;
+input[type="button"],
+input[type="reset"],
+input[type="submit"],
+button[type="button"],
+button[type="reset"],
+button[type="submit"] {
+    &.mocor {
+        @extend %button;
+        &.primary {
+            background-color: var(--primary-color-1);
+            border-color: var(--primary-color-1);
+            color: white;
+        }
+        &.secondary {
+            background-color: var(--secondary-color-1);
+            border-color: var(--secondary-color-1);
+            color: white;
+        }
+        &.tertiary {
+            background-color: var(--tertiary-color-1);
+            border-color: var(--tertiary-color-1);
+            color: white;
+        }
+        &.outline {
+            background-color: transparent;
+            color: white;
+        }
+    }
 }
 
-input[type="button"].mocor.secondary,
-input[type="reset"].mocor.secondary,
-input[type="submit"].mocor.secondary {
-    background-color: var(--secondary-color-1);
-    border-color: var(--secondary-color-1);
-    color: white;
-}
-
-input[type="button"].mocor.tertiary,
-input[type="reset"].mocor.tertiary,
-input[type="submit"].mocor.tertiary {
-    background-color: var(--tertiary-color-1);
-    border-color: var(--tertiary-color-1);
-    color: white;
-}
-
-input[type="button"].mocor.outline,
-input[type="reset"].mocor.outline,
-input[type="submit"].mocor.outline {
-    background-color: transparent;
-    color: white;
+input[type="file"]::after {
+    @extend %button;
 }
