--- a/src/utils-css/base.scss
+++ b/src/utils-css/base.scss
@@ -1,19 +1,19 @@
-
-html, body {
+html,
+body {
   background: #fafafa;
   padding: 0px;
   margin: 0px;
   width: 100%;
   min-height: 100vh;
-  font-family: 'Nunito Sans', Roboto,-apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Nunito Sans", Roboto, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
-  
+
 :root {
-  --primary-color-1 : rgba(180,180,0,100%);
-  --primary-color-2: rgba(180,180,0,60%);
-  --primary-color-3: rgba(180,180,0,30%);
-  --secondary-color-1 : rgba(180,0,90,100%);
-  --tertiary-color-1 : rgba(180,90,0,100%);
+  --primary-color-1: rgba(180, 180, 0, 100%);
+  --primary-color-2: rgba(180, 180, 0, 60%);
+  --primary-color-3: rgba(180, 180, 0, 30%);
+  --secondary-color-1: rgba(180, 0, 90, 100%);
+  --tertiary-color-1: rgba(180, 90, 0, 100%);
 }
-  
-  
