--- a/src/utils-css/fonts/nunito-sans.scss
+++ b/src/utils-css/fonts/nunito-sans.scss
@@ -1,80 +1,79 @@
-
 @import "_font-weight";
 
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-Black.ttf');
-  font-weight:$black;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-Black.ttf");
+  font-weight: $black;
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-BlackItalic.ttf');
-  font-weight:$black;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-BlackItalic.ttf");
+  font-weight: $black;
   font-style: italic;
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-ExtraBold.ttf');
-  font-weight:$extraBold;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-ExtraBold.ttf");
+  font-weight: $extraBold;
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-ExtraBoldItalic.ttf');
-  font-weight:$extraBold;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-ExtraBoldItalic.ttf");
+  font-weight: $extraBold;
   font-style: italic;
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-Bold.ttf');
-  font-weight:bold;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-Bold.ttf");
+  font-weight: bold;
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-BoldItalic.ttf');
-  font-weight:bold;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-BoldItalic.ttf");
+  font-weight: bold;
   font-style: italic;
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-SemiBold.ttf');
-  font-weight:$semiBold;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-SemiBold.ttf");
+  font-weight: $semiBold;
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-SemiBoldItalic.ttf');
-  font-weight:$semiBold;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-SemiBoldItalic.ttf");
+  font-weight: $semiBold;
   font-style: italic;
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-Italic.ttf');
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-Italic.ttf");
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-Italic.ttf');
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-Light.ttf');
-  font-weight:$light;
-}
-@font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-LightItalic.ttf');
-  font-weight:$light;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-Italic.ttf");
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-ExtraLight.ttf');
-  font-weight:$extraLight;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-Light.ttf");
+  font-weight: $light;
 }
 @font-face {
-  font-family: 'Nunito Sans';
-  src: url('../../Nunito_Sans/NunitoSans-ExtraLightItalic.ttf');
-  font-weight:$extraLight;
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-LightItalic.ttf");
+  font-weight: $light;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-ExtraLight.ttf");
+  font-weight: $extraLight;
+}
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../../Nunito_Sans/NunitoSans-ExtraLightItalic.ttf");
+  font-weight: $extraLight;
   font-style: italic;
 }
